Add /optimize endpoint to Swagger documentation
